--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.6.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "motion": "^12.7.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^7.1.5"
