--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@ant-design/icons": "^5.6.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "i18next": "^25.0.0",
     "motion": "^12.7.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^15.4.1",
     "react-router": "^7.1.5"
   },
   "devDependencies": {
